# tui-cursive

./: Cargo.toml  README.md  rust-toolchain.toml
src/: actions.rs  config_layer.rs  data.rs  error.rs  fsm.rs  installer.rs  main.rs  main_back.rs  state.rs  utils.rs
src/views/: config.rs  ctrl_buttons.rs  fs_select.rs  idev.rs  mod.rs  networking.rs  nic.rs  overview.rs  pdev.rs  raid.rs
