[package]
name = "tui-cursive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
[dependencies.cursive]
version = "0.17.0"
#path = "./cursive/cursive" 
default-features = false
features = ["crossterm-backend"]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"