[package]
name = "tui-cursive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
num-traits = "0.2.15"
num-derive = "0.3.3"
cursive-aligned-view = "0.6.0"
rbmenu = "0.6.3"
clipboard = "0.5.0"
network-interface = "0.1.4"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
[dependencies.cursive]
version = "0.20.0"
#path = "./cursive/cursive" 
default-features = false
features = ["crossterm-backend"]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"